fix(editor): Hover and active states not showing in execution list on dark mode (#9002)

--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -202,6 +202,7 @@
 	--execution-card-border-waiting: var(--prim-color-secondary-tint-300);
 	--execution-card-border-running: var(--prim-color-alt-b-tint-250);
 	--execution-card-border-unknown: var(--prim-gray-120);
+	--execution-card-background-hover: var(--color-foreground-light);
 
 	// NDV
 	--color-run-data-background: var(--color-background-base);
